# cudaCompress

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  examples.cpp  main.cpp
examples/tools/: imgtools.h
include/cudaCompress/: BitStream.h  Encode.h  EncodeCommon.h  Instance.h  Timing.h  global.h
include/cudaCompress/util/: Bits.h  CudaTimer.h  DWT.h  Quantize.h  YCoCg.h
src/: CMakeLists.txt  Histogram.cu  Huffman.cu  HuffmanDesign.h  HuffmanKernels.cui  InstanceImpl.cpp  InstanceImpl.h  RunLength.cu  Timing.cpp
src/CPU/: ArithmeticCPU.cpp  ArithmeticCPU.h  CMakeLists.txt  EncodeCPU.cpp  EncodeCPU.h  EncoderTestSuite.cpp  GolombRiceCPU.cpp  GolombRiceCPU.h  HistogramCPU.h  HuffmanCPU.h  HuffmanTableCPU.cpp  HuffmanTableCPU.h  RBUCCPU.cpp  RBUCCPU.h  RunLengthCPU.h  YCoCgCPU.cpp  YCoCgCPU.h
src/cudaCompress/: BitStreamGPU.cuh  CMakeLists.txt  Encode.cpp  Histogram.h  Huffman.h  HuffmanDesign.h  HuffmanTable.cu  HuffmanTable.h  Instance.cpp  InstanceImpl.h  PackInc.cu  PackInc.h  RunLength.h  cudaUtil.h  util.h
src/cudaCompress/reduce/: reduce_plan.h
src/cudaCompress/scan/: scan_app.cui  scan_cta.cui  scan_plan.cpp  scan_plan.h
src/cudaCompress/util/: Bits.cu  DWTCommon.cuh  DWTFloat.cu  DWTFloatFilters.cuh  DWTFloatFromSymbolsKernels.cui  Quantize.cuh  YCoCg.cu
src/examples/: CMakeLists.txt  CompressHeightfield.h  CompressImage.h  CompressVolume.h  GPUResources.h  cudaUtil.h  examples.cpp  examples.h
src/examples/tools/: entropy.h  imgtools.h  rawfile.h
src/profiler/: profiler.cpp
src/reduce/: reduce_app.cui  reduce_kernel.cui  reduce_plan.cpp
src/scan/: vector_kernel.cui
src/util/: DWTFloat2DLowpassKernels.cui  DWTFloatKernels.cui  DWTInt.cu  DWTInt2DLowpassKernels.cui  DWTIntKernels.cui  Quantize.cu  QuantizeKernels.cui
test/: CMakeLists.txt  EncoderTestSuite.cpp  EncoderTestSuite.h  main.cpp
